--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.1",
+    "axios": "^1.7.2",
+    "mongoose": "^8.4.5",
     "nuxt": "^3.12.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.31"
